tests/macros/duplicate/default.stderr
error: duplicate option `default`
 --> $DIR/default.rs:4:9
  |
4 |         default: todo!(),
  |         ^^^^^^^
