tests/macros/duplicate/default.rs
fn main() {
    let q = inquisition::questions![input {
        default: todo!(),
        default: todo!(),
    }];
}
